deploy/yaml/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres"
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          securityContext:
            runAsUser: 70
            runAsGroup: 70
            runAsNonRoot: true
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
              name: postgres
          livenessProbe:
            exec:
              command:
                - "pg_isready"
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: postgres
