deploy/yaml/aigc-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aigc-gateway
  labels:
    app: aigc-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aigc-gateway
  template:
    metadata:
      labels:
        app: aigc-gateway
    spec:
      containers:
        - name: aigc-gateway
          image: registry.cn-beijing.aliyuncs.com/chrisliu95/aigc-gateway:5-19-8 # replace it with your exactly <image_name:tags>
          command:
            - "./aigc-gateway"
          ports:
            - containerPort: 8090
              name: dashboard
      serviceAccountName: aigc-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: aigc-gateway
  labels:
    app: aigc-gateway
spec:
  selector:
    app: aigc-gateway
  ports:
    - protocol: TCP
      name: dashboard
      port: 8090
      targetPort: 8090
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aigc-gateway
  annotations:
    "nginx.ingress.kubernetes.io/ssl-redirect": "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "dashboard.c5464a5f2c39341d3b3eda6e2dd37b55.cn-hangzhou.alicontainer.com"
      secretName: tls-logto
  rules:
    - host: "dashboard.c5464a5f2c39341d3b3eda6e2dd37b55.cn-hangzhou.alicontainer.com"
      http:
        paths:
          - backend:
              service:
                name: aigc-gateway
                port:
                  number: 8090
            pathType: ImplementationSpecific
            path: "/"
